# geometric-graphs

./: .bumpversion.cfg  .flake8  .readthedocs.yml  CONTRIBUTING.rst  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/geometric_graphs/: __init__.py  __main__.py  api.py  benchmark.py  cli.py  generators.py  util.py  version.py
tests/: __init__.py  test_api.py  test_version.py
