##########################
# Setup.py Configuration #
##########################
[metadata]
name = geometric_graphs
version = 0.0.4-dev
description = Generate knowledge graphs with interesting geometries, like lattices.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/cthoyt/geometric-graphs
download_url = https://github.com/cthoyt/geometric-graphs/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/geometric-graphs/issues
    Source Code = https://github.com/cthoyt/geometric-graphs

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
keywords =
    snekpack
    cookiecutter
    knowledge graph
    knowledge graph embedding
    knowledge graph embedding models

[options]
install_requires =
    more_itertools
    click
    class_resolver
    tqdm

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.9

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
pykeen =
    pykeen
    matplotlib
    seaborn
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext

[options.entry_points]
console_scripts =
    geometric_graphs = geometric_graphs.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = geometric_graphs
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/geometric_graphs
    .tox/*/lib/python*/site-packages/geometric_graphs

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
